--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>About ROI</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="icon" href="static/favicon.ico" type="image/x-icon" />
+
+  <meta property="og:title" content="ROI Calculator – Simple Business Profit Tool" />
+    <meta property="og:description" content="Easily calculate your business ROI. Clean design, supports multiple currencies, and saves your last 3 results." />
+    <meta property="og:image" content="https://financial-calc.onrender.com/static/favicon.ico" />
+    <meta property="og:url" content="https://financial-calc.onrender.com" />
+
 </head>
 <body>
   <div class="container">
