--- a/templates/new_form.html
+++ b/templates/new_form.html
@@ -3,6 +3,7 @@
 <head>
     <title>ROI Calculator</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon" />
 
     <!-- Open Graph Meta Tags -->
