--- a/templates/newer_results.html
+++ b/templates/newer_results.html
@@ -3,6 +3,7 @@
 <head>
     <title>ROI Results</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="static/favicon.ico" type="image/x-icon" />
 
     <meta property="og:title" content="ROI Calculator – Simple Business Profit Tool" />
