--- a/templates/newer_results.html
+++ b/templates/newer_results.html
@@ -8,7 +8,7 @@
 
     <meta property="og:title" content="ROI Calculator – Simple Business Profit Tool" />
     <meta property="og:description" content="Easily calculate your business ROI. Clean design, supports multiple currencies, and saves your last 3 results." />
-    <meta property="og:image" content="https://financial-calc.onrender.com/static/favicon.ico" />
+    <meta property="og:image" content="https://financial-calc.onrender.com/static/preview.png" />
     <meta property="og:url" content="https://financial-calc.onrender.com" />
 
 </head>
